--- a/"First" Web Page.html
+++ b/"First" Web Page.html
@@ -3,14 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>very cool stuff</title>
-        <h1>very cool stuff</h1>
     </head>
     <body>
+        <h1>very cool stuff</h1>
         <p>I like stuff such as:</p>
         <ul>
             <li>Video games</li>
             <li>Playing basketball</li>
+            <img src="images-_2_.jpg" height="150" width="138" alt="basketball">
             <li>Coding (sometimes)</li>
+            <img src="images.jpg" height="150" width="138" alt="coding"
         </ul>
+        <br>
+        <a href="www.w3schools.com">W3 Schools</a>
     </body>
 </html>
