--- a/"First" Web Page.html
+++ b/"First" Web Page.html
@@ -3,6 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>very cool stuff</title>
+        <style>
+            ul, li { 
+            list-style-type: none;
+            }
+            body{
+            color:#266B6B;
+            background-color:#E79292;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+            width: 500px;
+            height: 800em;
+            margin: auto;
+            }
+            a:link{color:#7e2a2a}
+            a:hover{color:#3E7C7C}
+            a:visited{color:#A1C161}
+            
+            
+            </style>
     </head>
     <body>
         <h1>very cool stuff</h1>
@@ -10,9 +29,9 @@
         <ul>
             <li>Video games</li>
             <li>Playing basketball</li>
-            <img src="images-_2_.jpg" height="150" width="138" alt="basketball">
+            <img src="images-_2_.jpg" height="200" width="200" alt="basketball">
             <li>Coding (sometimes)</li>
-            <img src="images.jpg" height="150" width="138" alt="coding"
+            <img src="images.jpg" height="150" width="250" alt="coding">
         </ul>
         <br>
         <a href="www.w3schools.com">W3 Schools</a>
