--- a/final.html
+++ b/final.html
@@ -4,44 +4,78 @@
         <meta charset="UTF-8">
         <title>Final</title>
         <style>
-            ul, li { 
+            header{
+                display: flex;
+                margin:auto;
+            flex-wrap:wrap ;
+            }
+            ul{ 
+            justify-content: center;
+            display: flex;
+            flex-wrap:wrap;
+            flex-flow: row;
             list-style-type: none;
+            align-self:flex-start;
+            margin:auto;
+            }
+            li{
+            justify-content: space-between;
+            display: flex;
+            flex-wrap:wrap;
+            flex-flow: row;
+            list-style-type: none;
+            padding-left: 10%;
             }
             body{
             color:#4d6363;
             background-color:#a9adad;
             font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
             width: 500px;
             height: 800em;
+            text-align: center;
             margin: auto;
             }
             a:link{color:#7e2a2a}
             a:hover{color:#3E7C7C}
             a:visited{color:#A1C161}
-            
-            
+            ol{
+            padding-left: 10%;
+            justify-content: center;
+            display: flex;
+            flex-wrap:wrap;
+            flex-flow: row;
+            }
+            div{
+                display: flex;
+                padding: 10px;
+            }
             </style>
     </head>
+    <body>
     <header>
         <h1 id="top">Zion National Park</h1>
-    </header>
-    <body>
         <p>Zion National Park captivates with its majestic red rock formations, winding canyons, and lush vegetation, providing an idyllic retreat for nature lovers. Visitors can explore iconic trails like Angels Landing and the Narrows, offering stunning views and thrilling adventures. With its diverse wildlife and array of outdoor activities, Zion promises an unforgettable experience amidst its breathtaking landscapes.</p>
         <h6>Why you should visit the park:</h6>
+    </header>     
+    <div>
         <ul>
             <li>It has a breathtaking view from the hikes</li>
-            <img src="picture.jpg" height="200" width="200" alt="hike">
+            <li></li>
+            <li></li>
             <li>There is amazing bike trails</li>
-            <img src="bike.jpg" height="150" width="250" alt="bike">
+            <li></li>
+            <li></li>
             <li>You can go white water rafting</li>
-            <img src="raft.jpg" height="150" width="250" alt="raft">
             <li>You can also go birding</li>
-            <img src="bird.jpg" height="150" width="250" alt="bird">
         </ul>
-
-
-        <br>
+    </div>
+        <ol>
+        <li><img src="picture.jpg" height="200" width="200" alt="hike"></li>
+        <li><img src="bike.jpg" height="150" width="250" alt="bike"></li>
+        <li><img src="raft.jpg" height="150" width="250" alt="raft"></li>
+        <li><img src="bird.jpg" height="150" width="250" alt="bird"></li>
+        </ol>
         <a href="https://www.nps.gov/index.htm">The National Park Website</a>
+
     </body>
 </html>
